stack now operational