@@ -9,17 +9,12 @@ import javafx.application.Platform;
 import javafx.collections.FXCollections;
 import javafx.embed.swing.SwingFXUtils;
 import javafx.event.ActionEvent;
-import javafx.event.EventHandler;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
-import javafx.scene.Group;
 import javafx.scene.Scene;
 import javafx.scene.control.*;
-import javafx.scene.effect.Effect;
 import javafx.scene.effect.Light;
 import javafx.scene.image.ImageView;
-import javafx.scene.image.PixelReader;
-import javafx.scene.image.WritableImage;
 import javafx.scene.layout.*;
 import javafx.scene.paint.Color;
 import javafx.scene.shape.Rectangle;
@@ -29,11 +24,9 @@ import javafx.scene.image.Image;
 import structures.LinkedListPeekAheadStack;
 import structures.PeekAheadStack;
 import utils.ImageDrawingUtils;
-
 import javax.imageio.ImageIO;
 import java.io.File;
 import java.io.IOException;
-import java.util.Map;
 
 public class Main extends Application {
 
@@ -51,12 +44,6 @@ public class Main extends Application {
 
     private final FileChooser fileChooser = new FileChooser();
 
-    private final Button chooseImageButton = new Button("Elija la imagen ");
-
-    private final Button changeImageButton = new Button("Cambiar imagen ");
-
-    private Text transfImgAvg = null;
-
     private ImageView xImageView = null, yImageView = null;
 
     private ImageView[] previews = new ImageView[PREVIEWS];
@@ -68,11 +55,176 @@ public class Main extends Application {
         renderStackTop(stage, root);
     }
 
-    private void popAndRender(formats.Image image, Stage stage, BorderPane root){
+    private void popAndRender(Stage stage, BorderPane root){
         if(stack.isEmpty())
             return;
         stack.pop();
         renderStackTop(stage, root);
+    }
+
+    private void initializeStackControlButtons(final Stage stage, BorderPane root){
+
+        Button enter = new Button("ENTER");
+        Button pop = new Button("POP");
+        Button swap = new Button("X <-> Y");
+        Button save = new Button("SAVE");
+
+        enter.setOnAction(e-> {
+            if(stack.isEmpty())
+                return;
+            pushAndRender(stack.peek().clone(), stage, root);
+        });
+
+        pop.setOnAction(e-> popAndRender(stage, root));
+
+        swap.setOnAction(e-> {
+            if(stack.size() < 2)
+                return;
+            formats.Image x = stack.pop(), y = stack.pop();
+            stack.push(x); stack.push(y);
+            renderStackTop(stage, root);
+        });
+
+        save.setOnAction(e-> {
+            if(stack.isEmpty())
+                return;
+            saveImage(stage, stack.peek());
+        });
+
+
+        HBox bottom = new HBox();
+        bottom.setPadding(new Insets(30));
+        bottom.setSpacing(30);
+        bottom.getChildren().addAll(enter, pop, swap, save);
+        root.setBottom(bottom);
+
+    }
+
+    private void initializeMenu(Stage stage, BorderPane root){
+        MenuBar menuBar = new MenuBar();
+        menuBar.prefWidthProperty().bind(stage.widthProperty());
+        root.setTop(menuBar);
+
+        //FILE
+        Menu fileMenu = new Menu("File");
+            MenuItem openImage = new MenuItem("Load image");
+            MenuItem exitMenuItem = new MenuItem("Exit");
+            exitMenuItem.setOnAction(actionEvent -> Platform.exit());
+            openImage.setOnAction((final ActionEvent e) ->  chooseImage(stage,root));
+        fileMenu.getItems().addAll(openImage,
+                new SeparatorMenuItem(), exitMenuItem);
+
+        /**
+         * DRAW SECTION
+         */
+        Menu drawMenu = new Menu("Draw");
+
+        //SHAPES
+        Menu shapesMenu = new Menu("Shapes");
+        MenuItem drawCircle = new MenuItem("Draw circle");
+        drawCircle.setOnAction((final ActionEvent e) -> drawCircle(stage, root));
+        MenuItem drawRectangle = new MenuItem("Draw rectangle");
+        drawRectangle.setOnAction((final ActionEvent e) -> drawRectangle(stage, root));
+        shapesMenu.getItems().addAll(drawCircle, drawRectangle);
+
+        //GRADIENTS
+        Menu gradationMenu = new Menu("Gradients");
+        MenuItem drawPlain = new MenuItem("Plain");
+        drawPlain.setOnAction(x -> drawPlainImage(stage, root));
+        MenuItem drawGrayScale = new MenuItem("Grey scale");
+        drawGrayScale.setOnAction((final ActionEvent e) -> drawGrayScale(stage, root));
+        MenuItem drawColorScale = new MenuItem("Color scale");
+        drawColorScale.setOnAction((final ActionEvent e) -> drawColorScale(stage, root));
+        gradationMenu.getItems().addAll(drawPlain,drawGrayScale,drawColorScale);
+
+        drawMenu.getItems().addAll(shapesMenu, gradationMenu);
+
+        /**
+         * OPERATIONS SECRION
+         */
+        Menu opsMenu = new Menu("Operations");
+
+        //Unary
+        Menu unaryOps = new Menu("Unary");
+        MenuItem negative = new MenuItem("Negative");
+        negative.setOnAction(x-> {
+            if(stack.isEmpty()){
+                showErrorModal(stage, "Empty stack");
+                return;
+            }
+            formats.Image image = stack.pop();
+            pushAndRender(image.negative(), stage, root);
+        });
+        MenuItem automaticContrast = new MenuItem("Automatic contrast enhancement");
+        automaticContrast.setOnAction(x-> {
+            if(stack.isEmpty()){
+                showErrorModal(stage, "Empty stack");
+                return;
+            }
+            formats.Image image = stack.pop();
+            pushAndRender(image.automaticContrastEnhancement(), stage, root);
+        });
+        MenuItem equalization = new MenuItem("Equalization");
+        equalization.setOnAction(x-> {
+            if(stack.isEmpty()){
+                showErrorModal(stage, "Empty stack");
+                return;
+            }
+            formats.Image image = stack.pop();
+            pushAndRender(image.equalize(), stage, root);
+        });
+        unaryOps.getItems().addAll(negative, automaticContrast, equalization);
+
+
+        //Binary
+        Menu binaryOps = new Menu("Binary");
+        MenuItem sum = new MenuItem("Sum");
+        sum.setOnAction(e-> {
+            if(stack.size() < 2){
+                showErrorModal(stage, "Insufficient operands");
+                return;
+            }
+            if(!stack.peek(0).isBinaryOperandCompatible(stack.peek(1))){
+                showErrorModal(stage, "Unmatching operands");
+                return;
+            }
+            formats.Image x = stack.pop(), y = stack.pop();
+            pushAndRender(y.add(x), stage, root);
+        });
+        MenuItem subtract = new MenuItem("Subtract");
+        subtract.setOnAction(e-> {
+            if(stack.size() < 2){
+                showErrorModal(stage, "Insufficient operands");
+                return;
+            }
+            if(!stack.peek(0).isBinaryOperandCompatible(stack.peek(1))){
+                showErrorModal(stage, "Unmatching operands");
+                return;
+            }
+            formats.Image x = stack.pop(), y = stack.pop();
+            pushAndRender(y.subtract(x), stage, root);
+        });
+        MenuItem product = new MenuItem("Product");
+        product.setOnAction(e-> {
+            if(stack.size() < 2){
+                showErrorModal(stage, "Insufficient operands");
+                return;
+            }
+            if(!stack.peek(0).isBinaryOperandCompatible(stack.peek(1))){
+                showErrorModal(stage, "Unmatching operands");
+                return;
+            }
+            formats.Image x = stack.pop(), y = stack.pop();
+            pushAndRender(y.product(x), stage, root);
+        });
+        binaryOps.getItems().addAll(sum, subtract, product);
+
+
+        opsMenu.getItems().addAll(unaryOps, binaryOps);
+
+
+        menuBar.getMenus().addAll(fileMenu,drawMenu, opsMenu);
+
     }
 
     @Override
@@ -82,48 +234,12 @@ public class Main extends Application {
 
         final BorderPane root = new BorderPane();
 
-        MenuBar menuBar = new MenuBar();
-        menuBar.prefWidthProperty().bind(stage.widthProperty());
-        root.setTop(menuBar);
+        initializeStackControlButtons(stage, root);
 
-        Menu fileMenu = new Menu("Archivo");
-        MenuItem openImage = new MenuItem("Cargar Imagen");
-        //MenuItem saveImage = new MenuItem("Guardar Imagen Transformada");
-        MenuItem exitMenuItem = new MenuItem("Exit");
-        exitMenuItem.setOnAction(actionEvent -> Platform.exit());
-        openImage.setOnAction((final ActionEvent e) ->  chooseImage(stage,root));
-        //saveImage.setOnAction((final ActionEvent e) -> saveImage(stage,transfImg));
-        //saveImage.setDisable(true);
+        initializeMenu(stage, root);
 
-        Menu toolsMenu = new Menu("Herramientas");
-        Menu drawImage = new Menu("Dibujar Figura");
-        MenuItem drawCircle = new MenuItem("Dibujar círculo");
-        drawCircle.setOnAction((final ActionEvent e) -> drawCircle(stage));
-        MenuItem drawRectangle = new MenuItem("Dibujar rectángulo");
-        drawRectangle.setOnAction((final ActionEvent e) -> drawRectangle(stage));
-
-        drawImage.getItems().addAll(drawCircle,drawRectangle);
-
-        Menu createGradation = new Menu("Crear Degradé");
-        MenuItem drawGrayScale = new MenuItem("Degradé de grises");
-        drawGrayScale.setOnAction((final ActionEvent e) -> drawGrayScale(stage));
-        MenuItem drawColorScale = new MenuItem("Degradé a color");
-        drawColorScale.setOnAction((final ActionEvent e) -> drawColorScale(stage));
-
-        createGradation.getItems().addAll(drawGrayScale,drawColorScale);
-
-
-        toolsMenu.getItems().addAll(drawImage,createGradation);
-
-
-        fileMenu.getItems().addAll(openImage,
-                new SeparatorMenuItem(), exitMenuItem);
-
-        menuBar.getMenus().addAll(fileMenu,toolsMenu);
-
-        root.getChildren().addAll(chooseImageButton);
-        root.setStyle("-fx-background-color: BEIGE;");
-        stage.setScene(new Scene(root, 500, 500));
+        root.setStyle("-fx-background-color: WHITE;");
+        stage.setScene(new Scene(root, 1024, 1024));
 
         stage.show();
     }
@@ -175,7 +291,7 @@ public class Main extends Application {
                         }
                         break;
                     default:
-                        showErrorModal(stage,"Formato de imagen no aceptado.");
+                        showErrorModal(stage,"Format " + aux[1].toUpperCase() + " not accepted.");
                         break;
 
                 }
@@ -344,9 +460,9 @@ public class Main extends Application {
 
         } else if(img.getEncoding().equals(Encoding.GS)){
             double avg = img.avg()[0];
-            grayLabel = new Text(String.format("Promedio de Gris: %.2f", avg));
+            grayLabel = new Text(String.format("Grey average: %.2f", avg));
 
-            grayLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
+            grayLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
 
         }
         return grayLabel;
@@ -354,13 +470,13 @@ public class Main extends Application {
 
 
     private void showModalForRaw(Stage stage, BorderPane root ,String path){
-        Text widthLabel = new Text("Ancho");
-        Text heightLabel = new Text("Alto");
+        Text widthLabel = new Text("Width");
+        Text heightLabel = new Text("Height");
 
         TextField widthField = new TextField();
         TextField heightField = new TextField();
 
-        Button submit = new Button("Ok");
+        Button submit = new Button("OK");
 
 
         GridPane gridPane = new GridPane();
@@ -379,15 +495,15 @@ public class Main extends Application {
 
         submit.setStyle("-fx-background-color: darkslateblue; -fx-text-fill: white;");
 
-        widthLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        heightLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        gridPane.setStyle("-fx-background-color: BEIGE;");
+        widthLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        heightLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        gridPane.setStyle("-fx-background-color: WHITE;");
 
         Scene scene = new Scene(gridPane);
 
 
         Stage newWindow = new Stage();
-        newWindow.setTitle("Ingresar Dimensiones");
+        newWindow.setTitle("Enter dimensions");
         newWindow.setScene(scene);
 
         newWindow.setX(stage.getX() + 200);
@@ -397,12 +513,11 @@ public class Main extends Application {
 
         submit.setOnAction(event -> {
             try {
-                Integer width = new Integer(widthField.getText());
-                Integer height = new Integer(heightField.getText());
+                Integer width = Integer.valueOf(widthField.getText());
+                Integer height = Integer.valueOf(heightField.getText());
                 pushAndRender(new Raw(width,height,Encoding.GS,path), stage, root);
             } catch (Exception e) {
-                showErrorModal(stage,"Las dimensiones ingresadas son incorrectas");
-                return;
+                showErrorModal(stage,"Invalid dimensions, try again");
             }
             newWindow.close();
         });
@@ -411,7 +526,7 @@ public class Main extends Application {
     private void showErrorModal(Stage stage,String errorMsg){
         Label error = new Label(errorMsg);
 
-        Button close = new Button("Cerrar");
+        Button close = new Button("OK");
 
         GridPane gridPane = new GridPane();
         gridPane.setMinSize(300, 100);
@@ -424,8 +539,8 @@ public class Main extends Application {
         gridPane.add(error, 0, 0);
         gridPane.add(close, 1, 1);
 
-        error.setStyle("-fx-font: normal bold 14px 'serif' ");
-        gridPane.setStyle("-fx-background-color: BEIGE;");
+        error.setStyle("-fx-font: normal bold 14px 'Arial' ");
+        gridPane.setStyle("-fx-background-color: WHITE;");
         close.setStyle("-fx-background-color: darkslateblue; -fx-text-fill: white;");
 
 
@@ -433,7 +548,7 @@ public class Main extends Application {
 
         // New window (Stage)
         Stage newWindow = new Stage();
-        newWindow.setTitle("Datos Incorrectos");
+        newWindow.setTitle("Error");
         newWindow.setScene(scene);
 
         // Set position of second window, related to primary window.
@@ -446,24 +561,115 @@ public class Main extends Application {
     }
 
 
+    private void drawPlainImage(Stage stage, BorderPane root){
+        Text centerLabel = new Text("Color");
+        Text RLabel = new Text("         R");
+        Text GLabel = new Text("         G");
+        Text BLabel = new Text("         B");
+        Text widthLabel = new Text("Width");
+        Text heightLabel = new Text("Height");
 
-    private void drawCircle(Stage stage){
-        Text centerLabel = new Text("Centro");
-        Text xLabel = new Text("         X");
-        Text yLabel = new Text("         Y");
-        Text radiusLabel = new Text("Radio");
-        Text widthLabel = new Text("Ancho");
-        Text heightLabel = new Text("Alto");
-
-        TextField xField = new TextField();
-        TextField yField = new TextField();
-
-        TextField radiusField = new TextField();
+        TextField RField = new TextField();
+        TextField GField = new TextField();
+        TextField BField = new TextField();
 
         TextField widthField = new TextField();
         TextField heightField = new TextField();
 
-        Button submit = new Button("Ok");
+        Button submit = new Button("OK");
+
+
+        GridPane gridPane = new GridPane();
+        gridPane.setMinSize(400, 200);
+        gridPane.setPadding(new Insets(10, 10, 10, 10));
+        gridPane.setVgap(5);
+        gridPane.setHgap(5);
+
+        gridPane.setAlignment(Pos.CENTER);
+
+        gridPane.add(centerLabel, 0, 0);
+        gridPane.add(RLabel, 0, 1);
+        gridPane.add(RField, 1, 1);
+        gridPane.add(GLabel, 0, 2);
+        gridPane.add(GField, 1, 2);
+        gridPane.add(BLabel, 0, 3);
+        gridPane.add(BField, 1, 3);
+        gridPane.add(widthLabel, 0, 4);
+        gridPane.add(widthField, 1, 4);
+        gridPane.add(heightLabel, 0, 5);
+        gridPane.add(heightField, 1, 5);
+        gridPane.add(submit, 0, 6);
+
+        submit.setStyle("-fx-background-color: darkslateblue; -fx-text-fill: white;");
+
+        centerLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        RLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        GLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        BLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        widthLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        heightLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        gridPane.setStyle("-fx-background-color: WHITE;");
+
+        Scene scene = new Scene(gridPane);
+
+
+        Stage newWindow = new Stage();
+        newWindow.setTitle("Enter dimensions and colors");
+        newWindow.setScene(scene);
+
+        newWindow.setX(stage.getX() + 200);
+        newWindow.setY(stage.getY() + 100);
+
+        newWindow.show();
+
+        submit.setOnAction(event -> {
+            try {
+
+                Double R = Double.valueOf(RField.getText());
+                Double G = Double.valueOf(GField.getText());
+                Double B = Double.valueOf(BField.getText());
+                Integer width = Integer.valueOf(widthField.getText());
+                Integer height = Integer.valueOf(heightField.getText());
+
+                if(R < 0 || G < 0 || B < 0 || R > 1 || G > 1 || B > 1 || width <= 0 || height <= 0)
+                    throw new Exception();
+
+                formats.Image image = ImageDrawingUtils.scale(Encoding.RGB, (x, y) -> new double[]{R, G, B}, width, height);
+
+                pushAndRender(image, stage, root);
+
+            } catch (Exception e) {
+                showErrorModal(stage,"Invalid dimensions or colors, try again");
+            }
+            newWindow.close();
+        });
+    }
+
+
+
+    private void drawCircle(Stage stage, BorderPane root){
+        if(stack.isEmpty()){
+            showErrorModal(stage, "Empty stack");
+            return;
+        }
+
+        Text centerLabel = new Text("Center");
+        Text xLabel = new Text("         X");
+        Text yLabel = new Text("         Y");
+        Text radiusLabel = new Text("Radius");
+        Text colorLabel = new Text("Color");
+        Text RLabel = new Text("         R");
+        Text GLabel = new Text("         G");
+        Text BLabel = new Text("         B");
+
+        TextField xField = new TextField();
+        TextField yField = new TextField();
+        TextField radiusField = new TextField();
+        TextField RField = new TextField();
+        TextField GField = new TextField();
+        TextField BField = new TextField();
+
+        Button submit = new Button("OK");
 
 
         GridPane gridPane = new GridPane();
@@ -481,28 +687,32 @@ public class Main extends Application {
         gridPane.add(yField, 1, 2);
         gridPane.add(radiusLabel, 0, 3);
         gridPane.add(radiusField, 1, 3);
-        gridPane.add(widthLabel, 0, 4);
-        gridPane.add(widthField, 1, 4);
-        gridPane.add(heightLabel, 0, 5);
-        gridPane.add(heightField, 1, 5);
-
-        gridPane.add(submit, 0, 6);
+        gridPane.add(colorLabel, 0, 4);
+        gridPane.add(RLabel, 0, 5);
+        gridPane.add(RField, 1, 5);
+        gridPane.add(GLabel, 0, 6);
+        gridPane.add(GField, 1, 6);
+        gridPane.add(BLabel, 0, 7);
+        gridPane.add(BField, 1, 7);
+        gridPane.add(submit, 0, 8);
 
         submit.setStyle("-fx-background-color: darkslateblue; -fx-text-fill: white;");
 
-        centerLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        xLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        yLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        radiusLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        widthLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        heightLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        gridPane.setStyle("-fx-background-color: BEIGE;");
+        centerLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        xLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        yLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        radiusLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        colorLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        RLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        GLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        BLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        gridPane.setStyle("-fx-background-color: WHITE;");
 
         Scene scene = new Scene(gridPane);
 
 
         Stage newWindow = new Stage();
-        newWindow.setTitle("Ingresar Dimensiones");
+        newWindow.setTitle("Enter dimensions");
         newWindow.setScene(scene);
 
         newWindow.setX(stage.getX() + 200);
@@ -512,18 +722,24 @@ public class Main extends Application {
 
         submit.setOnAction(event -> {
             try {
-                Integer x = new Integer(xField.getText());
-                Integer y = new Integer(yField.getText());
-                Integer radius = new Integer(radiusField.getText());
-                Integer width = new Integer(widthField.getText());
-                Integer height = new Integer(heightField.getText());
-                formats.Image blackImageWhiteCircle = new formats.Image(width,height, Encoding.GS, true);
-                ImageDrawingUtils.drawCircle(blackImageWhiteCircle,x,y,radius, (j, k) -> new double[]{1,1,1});
-                saveImage(stage,blackImageWhiteCircle);
+                Double R = Double.valueOf(RField.getText());
+                Double G = Double.valueOf(GField.getText());
+                Double B = Double.valueOf(BField.getText());
+                Integer x = Integer.valueOf(xField.getText());
+                Integer y = Integer.valueOf(yField.getText());
+                Integer radius = Integer.valueOf(radiusField.getText());
+
+                formats.Image image = stack.peek();
+
+                if(R < 0 || G < 0 || B < 0 || R > 1 || G > 1 || B > 1 || image.isOutOfBounds(x, y))
+                    throw new Exception();
+
+                ImageDrawingUtils.drawCircle(image,x,y,radius, (j, k) -> new double[]{R,G,B});
+
+                renderStackTop(stage, root);
 
             } catch (Exception e) {
-                showErrorModal(stage,"Las dimensiones ingresadas son incorrectas");
-                return;
+                showErrorModal(stage,"Invalid dimensions, try again");
             }
             newWindow.close();
         });
@@ -532,15 +748,22 @@ public class Main extends Application {
 
 
 
-    private void drawRectangle(Stage stage){
-        Text firstPoint = new Text("Punto inicial");
+    private void drawRectangle(Stage stage, BorderPane root){
+        if(stack.isEmpty()){
+            showErrorModal(stage, "Empty stack");
+            return;
+        }
+
+        Text firstPoint = new Text("Top left corner");
         Text xLabel1 = new Text("         X");
         Text yLabel1 = new Text("         Y");
-        Text secondPoint = new Text("Punto final");
+        Text secondPoint = new Text("Bottom right corner");
         Text xLabel2 = new Text("         X");
         Text yLabel2 = new Text("         Y");
-        Text widthLabel = new Text("Ancho");
-        Text heightLabel = new Text("Alto");
+        Text colorLabel = new Text("Color");
+        Text RLabel = new Text("         R");
+        Text GLabel = new Text("         G");
+        Text BLabel = new Text("         B");
 
         TextField xField1 = new TextField();
         TextField yField1 = new TextField();
@@ -548,10 +771,11 @@ public class Main extends Application {
         TextField xField2 = new TextField();
         TextField yField2 = new TextField();
 
-        TextField widthField = new TextField();
-        TextField heightField = new TextField();
+        TextField RField = new TextField();
+        TextField GField = new TextField();
+        TextField BField = new TextField();
 
-        Button submit = new Button("Ok");
+        Button submit = new Button("OK");
 
 
         GridPane gridPane = new GridPane();
@@ -572,30 +796,35 @@ public class Main extends Application {
         gridPane.add(xField2, 1, 4);
         gridPane.add(yLabel2, 0, 5);
         gridPane.add(yField2, 1, 5);
-        gridPane.add(widthLabel, 0, 6);
-        gridPane.add(widthField, 1, 6);
-        gridPane.add(heightLabel, 0, 7);
-        gridPane.add(heightField, 1, 7);
+        gridPane.add(colorLabel, 0, 6);
+        gridPane.add(RLabel, 0, 7);
+        gridPane.add(RField, 1, 7);
+        gridPane.add(GLabel, 0, 8);
+        gridPane.add(GField, 1, 8);
+        gridPane.add(BLabel, 0, 9);
+        gridPane.add(BField, 1, 9);
 
-        gridPane.add(submit, 0, 8);
+        gridPane.add(submit, 0, 10);
 
         submit.setStyle("-fx-background-color: darkslateblue; -fx-text-fill: white;");
 
-        firstPoint.setStyle("-fx-font: normal bold 20px 'serif' ");
-        xLabel1.setStyle("-fx-font: normal bold 20px 'serif' ");
-        yLabel1.setStyle("-fx-font: normal bold 20px 'serif' ");
-        secondPoint.setStyle("-fx-font: normal bold 20px 'serif' ");
-        xLabel2.setStyle("-fx-font: normal bold 20px 'serif' ");
-        yLabel2.setStyle("-fx-font: normal bold 20px 'serif' ");
-        widthLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        heightLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        gridPane.setStyle("-fx-background-color: BEIGE;");
+        firstPoint.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        xLabel1.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        yLabel1.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        secondPoint.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        xLabel2.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        yLabel2.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        colorLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        RLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        GLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        BLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        gridPane.setStyle("-fx-background-color: WHITE;");
 
         Scene scene = new Scene(gridPane);
 
 
         Stage newWindow = new Stage();
-        newWindow.setTitle("Ingresar Dimensiones");
+        newWindow.setTitle("Enter dimensions");
         newWindow.setScene(scene);
 
         newWindow.setX(stage.getX() + 200);
@@ -605,40 +834,44 @@ public class Main extends Application {
 
         submit.setOnAction(event -> {
             try {
-                Integer x1 = new Integer(xField1.getText());
-                Integer y1 = new Integer(yField1.getText());
-                Integer x2 = new Integer(xField2.getText());
-                Integer y2 = new Integer(yField2.getText());
-                Integer width = new Integer(widthField.getText());
-                Integer height = new Integer(heightField.getText());
-                formats.Image blackImageWhiteRectangle = new formats.Image(width,height, Encoding.GS, true);
-                ImageDrawingUtils.drawRectangle(blackImageWhiteRectangle,x1,y1,x2,y2, (j, k) -> new double[]{1,1,1});
-                saveImage(stage,blackImageWhiteRectangle);
+                Integer x1 = Integer.valueOf(xField1.getText());
+                Integer y1 = Integer.valueOf(yField1.getText());
+                Integer x2 = Integer.valueOf(xField2.getText());
+                Integer y2 = Integer.valueOf(yField2.getText());
+                Double R = Double.valueOf(RField.getText());
+                Double G = Double.valueOf(GField.getText());
+                Double B = Double.valueOf(BField.getText());
+
+                formats.Image image = stack.peek();
+
+                if(R < 0 || G < 0 || B < 0 || R > 1 || G > 1 || B > 1 || image.isOutOfBounds(x1, y1) || image.isOutOfBounds(x2, y2) || x2 <= x1 || y2 <= y1)
+                    throw new Exception();
+
+                ImageDrawingUtils.drawRectangle(image,x1,y1,x2,y2, (j, k) -> new double[]{R,G,B});
+
+                renderStackTop(stage, root);
 
             } catch (Exception e) {
-                showErrorModal(stage,"Las dimensiones ingresadas son incorrectas");
-                return;
+                showErrorModal(stage,"Invalid dimensions, try again");
             }
             newWindow.close();
         });
 
     }
 
-    private void drawGrayScale(Stage stage){
+    private void drawGrayScale(Stage stage, BorderPane root){
         formats.Image grayScale = ImageDrawingUtils.scale(Encoding.GS, ImageDrawingUtils.grayScale);
-        saveImage(stage,grayScale);
+        pushAndRender(grayScale,stage, root);
     }
 
-    private void drawColorScale(Stage stage){
-        Text bandLabel = new Text("Banda fija");
-        ChoiceBox bandChoice = new ChoiceBox(FXCollections.observableArrayList(
-                "R", "G", "B")
-        );
-        Text valueLabel = new Text("Valor fijo");
+    private void drawColorScale(Stage stage, BorderPane root){
+        Text bandLabel = new Text("Fixed band");
+        ChoiceBox bandChoice = new ChoiceBox(FXCollections.observableArrayList("R", "G", "B"));
+        Text valueLabel = new Text("Fixed value");
 
         TextField valueField = new TextField();
 
-        Button submit = new Button("Ok");
+        Button submit = new Button("OK");
 
 
         GridPane gridPane = new GridPane();
@@ -657,15 +890,15 @@ public class Main extends Application {
 
         submit.setStyle("-fx-background-color: darkslateblue; -fx-text-fill: white;");
 
-        bandLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        valueLabel.setStyle("-fx-font: normal bold 20px 'serif' ");
-        gridPane.setStyle("-fx-background-color: BEIGE;");
+        bandLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        valueLabel.setStyle("-fx-font: normal bold 20px 'Arial' ");
+        gridPane.setStyle("-fx-background-color: WHITE;");
 
         Scene scene = new Scene(gridPane);
 
 
         Stage newWindow = new Stage();
-        newWindow.setTitle("Ingresar Color");
+        newWindow.setTitle("Enter color");
         newWindow.setScene(scene);
 
         newWindow.setX(stage.getX() + 200);
@@ -676,18 +909,17 @@ public class Main extends Application {
         submit.setOnAction(event -> {
             try {
                 Integer index = bandChoice.getSelectionModel().getSelectedIndex();
-                Double value = new Double(valueField.getText());
+                Double value = Double.valueOf(valueField.getText());
                 if (value < 0 || value > 1){
-                    showErrorModal(stage,"El valor debe ir de 0 a 1");
+                    showErrorModal(stage,"Fixed value must be in [0, 1]");
                     return;
                 }
                 formats.Image img = ImageDrawingUtils.scale(Encoding.RGB, ImageDrawingUtils.fixedRGB(index,value));
-                saveImage(stage,img);
-                newWindow.close();
+                pushAndRender(img,stage, root);
             } catch (Exception e) {
-                showErrorModal(stage,"Las dimensiones ingresadas son incorrectas");
-                return;
+                showErrorModal(stage,"Invalid dimensions, try again");
             }
+            newWindow.close();
         });
     }
 }
